; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_ctime.c__tctime_s.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_ctime.c__tctime_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@EINVAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @_tctime_s(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.tm, align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = call i64 @localtime_s(%struct.tm* %8, i32* %9)
  %11 = load i64, i64* @EINVAL, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i64, i64* @EINVAL, align 8
  store i64 %14, i64* %4, align 8
  br label %19

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i64 @_tasctime_s(i32* %16, i64 %17, %struct.tm* %8)
  store i64 %18, i64* %4, align 8
  br label %19

19:                                               ; preds = %15, %13
  %20 = load i64, i64* %4, align 8
  ret i64 %20
}

declare dso_local i64 @localtime_s(%struct.tm*, i32*) #1

declare dso_local i64 @_tasctime_s(i32*, i64, %struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
